# ml-stock-prediction

./: .gitignore  Makefile  pyproject.toml
daily_prediction/pytorch/: predict.py  requirements.txt  train.py  train_simulation.py  train_simulation_monthly.py
daily_prediction/tfkeras/: model.py  requirements.txt  train_simulation.py
data/: data_utils.py  data_utils_v2.py
prediction/: model.py  model_utils.py  predict_daily.py  predict_weekly.py  train_simulation_biweekly.py  train_simulation_daily.py  train_simulation_monthly.py  train_simulation_weekly.py
raw_data/: S&P500Daily.csv  SPY.csv  SPY_2024_12_06.csv  SPY_NASDAQ.csv  SPY_for_prediction.csv  TNX.csv
utils/: test_ta.py  utils.py
