[tool.poetry]
name = "ml-stock-prediction"
version = "0.1.0"
description = "Stock predictions"
authors = ["Erik Salino <erik.salino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.0"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
torch = "^2.0.1"
pandas-ta = "^0.3.14b0"
matplotlib = "^3.9.3"
vectorbt = "^0.26.2"
kaleido = "0.2.1"
nbformat = "^5.10.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
